# minus_games

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml
docs/: quick_start.md
minus_games_client/: Cargo.toml
minus_games_client/src/: lib.rs  main.rs  runtime.rs
minus_games_client/src/actions/: delete.rs  download.rs  menu.rs  mod.rs  other.rs  repair.rs  run.rs  scan.rs  sync.rs
minus_games_client/src/configuration/: mod.rs
minus_games_client/src/download_manager/: mod.rs
minus_games_client/src/minus_games_client/: mod.rs
minus_games_client/src/utils/: mod.rs
minus_games_finder/: Cargo.toml
minus_games_finder/src/: lib.rs  main.rs
minus_games_finder/src/configuration/: mod.rs
minus_games_finder/src/engine_descriptions/: engine_description.rs  mod.rs
minus_games_finder/src/engine_info_functions/: electron_functions.rs  final_fantasy_pixel_remaster_functions.rs  game_finding_utils.rs  kirikiri_functions.rs  mod.rs  other_functions.rs  ren_py_functions.rs  rpgm_functions.rs  rpgm_mz_functions.rs  rpgm_utils.rs  unity_functions.rs  unreal_functions.rs  wolf_rpg_engine_functions.rs
minus_games_finder/src/utils/: mod.rs
minus_games_gui/: Cargo.toml  build.rs
minus_games_gui/src/: main.rs  runtime.rs
minus_games_gui/src/minus_games_gui/: game_card.rs  minus_games_gui_message.rs  minus_games_settings.rs  mod.rs  style_constants.rs  utils.rs
minus_games_gui/src/minus_games_gui/configuration/: complete_configuration.rs  gui_configuration.rs  mod.rs
minus_games_gui/src/minus_games_gui/handlers/: gamepad_input_handler.rs  keyboard_event_handler.rs  lazy_image_download_handler.rs  lazy_image_loader_handler.rs  mod.rs  mouse_event_handler.rs  window_event_handler.rs
minus_games_gui/src/minus_games_gui/messages/: minus_games_gui_message.rs  mod.rs  modal_callback.rs
minus_games_gui/src/minus_games_gui/settings/: mod.rs
minus_games_gui/src/minus_games_gui/views/: buttons_helper.rs  components_helper.rs  downloading.rs  game_helper.rs  game_info_modal.rs  gaming.rs  icons.rs  loading.rs  mod.rs  ready.rs  settings_view.rs
minus_games_gui/src/minus_games_gui/widgets/: always_highlighter.rs  highlighter.rs  mod.rs
minus_games_models/: Cargo.toml
minus_games_models/src/: game_file_info.rs  game_infos.rs  game_list.rs  lib.rs  other.rs  rpgm_package.rs  sync_file_info.rs
minus_games_server/: Cargo.toml
minus_games_server/src/: main.rs
minus_games_server/src/app_state/: mod.rs
minus_games_server/src/auth/: auth_layer.rs  auth_layer_old.rs  mod.rs  user.rs  user_handler.rs
minus_games_server/src/auth/session_manager/: mod.rs
minus_games_server/src/configuration/: mod.rs
minus_games_server/src/controller/: client_controller.rs  download_controller.rs  finder_controller.rs  game_controller.rs  gui_controller.rs  mod.rs  sync_controller.rs  updater_controller.rs
minus_games_server/src/open_api/: mod.rs
minus_games_server/src/utils/: mod.rs
minus_games_updater/: Cargo.toml
minus_games_updater/src/: main.rs
minus_games_updater/src/configuration/: mod.rs
minus_games_utils/: Cargo.toml
minus_games_utils/src/: constants.rs  lib.rs
other/assets/client/: io.github.accessory.minus_games_client.desktop  io.github.accessory.minus_games_client.metainfo.xml
other/assets/client/console/: io.github.accessory.minus_games_client.desktop  io.github.accessory.minus_games_client.metainfo.xml
other/assets/client/desktop/: io.github.accessory.minus_games_client.desktop  io.github.accessory.minus_games_client.metainfo.xml
other/assets/common/: MinusGames.rc
other/assets/gui/: io.github.accessory.minus_games_gui.desktop  io.github.accessory.minus_games_gui.metainfo.xml
other/docs/: quick_start.md
other/flatpak/: build.sh  build_install_run.sh  io.github.accessory.minus_games_client.yml
other/pkgbuild/client/: PKGBUILD
other/pkgbuild/server/: PKGBUILD
other/scipts/: create_user_password.sh  run_client.bat  run_find.bat  run_finder.sh  run_gui.sh  run_server.sh  run_server_via_docker.sh
scipts/: create_user_password.sh  run_client.sh  run_server.bat
