[workspace]
resolver = "2"
members = [
    "minus_games_server",
    "minus_games_client",
    "minus_games_finder",
    "minus_games_utils",
    "minus_games_models",
    "minus_games_updater",
    "minus_games_gui",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[workspace.package]
version = "0.7.3"
edition = "2024"
authors = ["Accessory"]
repository = "https://github.com/Accessory/minus_games/"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env", "string"] }
tracing = "0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0"
dirs = "6"
strum = { version = "0", features = ["derive"] }