[package]
name = "minus_games_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { version = "0.7.3", features = ["codec"] }
reqwest = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
log = {workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
strum = { workspace = true }
walkdir = "2"
dialoguer = "0"
indicatif = "0"
mime = "0"
chrono = "0"
dirs = { workspace = true }
base64 = "0"
convert_case = "0"
minus_games_utils = { path = "../minus_games_utils" }
minus_games_models = { path = "../minus_games_models" }
minus_games_finder = { path = "../minus_games_finder" }

