[package]
name = "minus_games_finder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dotenvy = "0"
clap = { version = "4", features = ["derive", "env", "string"] }
tracing = "0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0"
minus_games_utils = { path = "../minus_games_utils" }
minus_games_models = { path = "../minus_games_models" }
strum = "0"
convert_case = "0"
textdistance = "1"
walkdir = "2"
csv = "1"