[package]
name = "minus_games_finder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dotenvy = { workspace = true }
clap = { version = "4", features = ["derive", "env", "string"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0"
minus_games_utils = { path = "../minus_games_utils" }
minus_games_models = { path = "../minus_games_models" }
strum = { workspace = true }
convert_case = "0"
textdistance = "1"
walkdir = "2"
csv = "1"