[package]
name = "minus_games_gui"
build = "build.rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iced = { version="0.13" , features = ["image", "tokio", "svg", "advanced"] }
dotenvy = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
minus_games_client = { path = "../minus_games_client" }
minus_games_models = { path = "../minus_games_models" }
tokio = { workspace = true }
clap = { workspace = true }
image = { version = "0", features = ["jpeg"] }
open = "5"
strum = { workspace = true }
gilrs = {version = "0", features = []}

[build-dependencies]
vergen = { version = "9", features = ["build"] }
vergen-git2 = { version = "1" }
anyhow = "1"
embed-resource = "3"
