[package]
name = "minus_games_gui"
build = "build.rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = ["image", "tokio", "svg", "advanced"] }
dotenvy = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
minus_games_client = { path = "../minus_games_client" }
minus_games_models = { path = "../minus_games_models" }
tokio = { workspace = true }
clap = { workspace = true }
image = { version = "0", features = ["jpeg"] }
open = "5"
strum = { workspace = true }
gilrs = { version = "0", features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation"
] }

[build-dependencies]
vergen = { version = "10.0.0-beta.5", features = ["build", "default"]}
vergen-git2 = { version = "10.0.0-beta.5", features = ["build", "default"]} # Change later
anyhow = "1"
embed-resource = "3"