[package]
name = "minus_games_models"
version = "0.3.0"
edition = "2021"

[dependencies]
strum = { version = "0.26", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
blake3 = "1"
chrono = { version = "0", features = ["serde"] }
minus_games_utils = {path = "../minus_games_utils"}
utoipa = "4"