[package]
name = "minus_games_models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
strum = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
blake3 = "1"
chrono = { version = "0", features = ["serde"] }
minus_games_utils = { path = "../minus_games_utils" }
utoipa = { version = "5", features = ["chrono"] }