[package]
name = "minus_games_server"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0", features = [
    "tokio",
    "tower-log",
    "query",
    "json",
    "macros",
    "multipart"
] }
axum-extra = { version = "0", features = ["async-read-body","cookie"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0" }
tracing = "0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "4", features = [
    "axum_extras",
    "chrono",
    "uuid",
    "openapi_extensions",
] }
chrono = { version = "0", features = ["serde"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
hyper = { version = "1", features = ["server"] }
clap = { version = "4", features = ["derive", "env", "string"] }
tower-http = { version = "0", features = ["full"] }
tower = { version = "0" }
home = "0"
glob = "0"
mime = "0"
futures-util = "0"
base64= "0"
uuid = "1"
minus_games_models = { path = "../minus_games_models" }
minus_games_utils = { path = "../minus_games_utils" }
minus_games_finder = { path = "../minus_games_finder" }
log = "0.4.21"
url = "2"