[package]
name = "minus_games_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.8", features = [
    "tokio",
    "tower-log",
    "query",
    "json",
    "macros",
    "multipart",
    "form",
    "http2"
] }
axum-extra = { version = "0.10", features = ["async-read-body", "cookie"] }
tokio = { workspace = true }
tokio-util = { version = "0" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { workspace = true }
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa.git", rev = "ac71b2353e144998f50bfe38d37794f39c151027", features = ["axum"] }
chrono = { version = "0", features = ["serde"] }
clap = { version = "4", features = ["derive", "env", "string"] }
tower-http = { version = "0", features = ["full"] }
tower = { version = "0" }
glob = "0"
mime = "0"
futures-util = "0"
base64 = "0"
uuid = "1"
log = { workspace = true }
utoipauto = "0"
url = "2"
minus_games_models = { path = "../minus_games_models" }
minus_games_utils = { path = "../minus_games_utils" }
minus_games_finder = { path = "../minus_games_finder" }
