[package]
name = "minus_games_updater"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dotenvy = "0"
tracing = "0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0", features = ["json", "cookies", "brotli", "gzip", "multipart", "blocking", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0", features = ["tokio-io"]}
minus_games_models = { path = "../minus_games_models" }
strum = { version = "0", features = ["derive"] }
chrono = "0"
filetime = "0"
base64 = "0"