[package]
name = "minus_games_updater"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { version = "1", features = ["derive"] }
reqwest = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
minus_games_models = { path = "../minus_games_models" }
strum = { workspace = true }
chrono = "0"
filetime = "0"
base64 = "0"