[package]
name = "minus_games_utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
home = "0"
clap = { version = "4" }
walkdir = "2"
filetime = "0"
argon2 = { version = "0" }
rand_core = { version = "0", features = ["getrandom"] }
